--- a/src/styles/section.css
+++ b/src/styles/section.css
@@ -8,7 +8,7 @@
   height: 40px;
   border-radius: 5px;
   border: none;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .form-control-btn:hover {
